# smart-fog-multiserver

./: .gitignore  xml-config.xml
camera-clients/: CMakeLists.txt  camera-client.py  camera-utils.cpp  py-viwer.py  xml-config.xml
camera-clients/xml-utils/: tinyxml2.h  xml-utils.cpp  xml-utils.hpp
jetson-server/: address.config  jetson-server.py  jetson-server.py~
jetson-server/deepLearning/: #detect.py#  address.config  app.py  app.py~  client-serverOD.py  detection.py  face_detection.py  runTests.py  testOD.py  weapon_detection.py
jetson-server/deepLearning/bodyDetector/: detector.py  detector.py~
jetson-server/deepLearning/data/: images-fonts.txt
jetson-server/deepLearning/faceDetector/: detector.py  detector.py~
jetson-server/deepLearning/faceIdentify/: detector.py  detector.py~
jetson-server/deepLearning/faces_database/: faces.db
jetson-server/deepLearning/objectDetection/: detect.py
jetson-server/deepLearning/weaponDetector/: detector.py  detector.py~
jetson-server/deepLearning/yoloV5Wrap/: detect.py  wrap.py
process-servers/: address.config  address.config.old  smartFog-server.py  viwer-server.py
process-servers/deepLearning/: perfMonitor.sh  testOD.py
process-servers/deepLearning/faceIdentify/: detect.py
process-servers/deepLearning/objectDetection/: detect.py
raspi-client/: CMakeLists.txt  CMakeLists.txt~  camera-utils.cpp  camera-utils.cpp~  camera-utils.hpp  camera-utils.hpp~  raspi-client.cpp  raspi-client.cpp~  xml-config.xml
raspi-client/xml-utils/: xml-utils.cpp  xml-utils.cpp~  xml-utils.hpp~  xmlConfig.cpp~
(+14 files in other folders)
